--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(champagne_src_list ${champagne_src_list}
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_method.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     PARENT_SCOPE
 )
