--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(champagne_src_list ${champagne_src_list}
+    ${CMAKE_CURRENT_SOURCE_DIR}/capsule_extraction_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/circle_grid_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_method.cpp
