[DEV] add class capsule extractor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(champagne_src_list ${champagne_src_list}
     ${CMAKE_CURRENT_SOURCE_DIR}/circle_grid_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_method.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/capsule_extractor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     PARENT_SCOPE
 )
