[CMAKE] add build directory for the cmake, and add apps folder for the executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
+
 set(CMAKE_CXX_STANDARD 11)
-project( Champagne )
-find_package( OpenCV REQUIRED )
+project(Placomosaique)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/ CACHE PATH "Output directory of all executables.")
+
+find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem system)
 
 include_directories(inc)
 add_subdirectory(src)
-add_executable(champagne src/main.cpp ${champagne_src_list})
-target_link_libraries(champagne ${OpenCV_LIBS} ${Boost_LIBRARIES} )
-
+add_subdirectory(apps)
