--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,8 @@
-set(champagne_src_list ${champagne_src_list}
+set(COMMON_SOURCES ${COMMON_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/capsule_extraction_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/circle_grid_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/hungarian_method.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/capsule_extractor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     PARENT_SCOPE
 )
