--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@ set(COMMON_SOURCES ${COMMON_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/capsules_solver.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/circle_grid_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_algorithm.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_utils.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_man.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_woman.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/capsule_extractor.cpp
     PARENT_SCOPE
 )
