--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(COMMON_SOURCES ${COMMON_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/capsule_extraction_pattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/capsules_solver.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/circle_grid_pattern.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/circle_grid.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_algorithm.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_man.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gale_shapley_woman.cpp
